# bedy

./: Cargo.toml  README.md  SECURITY.md  book.toml  cliff.toml
.github/workflows/: ci.yaml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
examples/poc-application/: Cargo.toml
examples/poc-application/src/: main.rs
examples/poc-declarations/: Cargo.toml
examples/poc-declarations/src/: lib.rs
