[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
authors = ["gibbz"]
edition = "2021"
exclude = ["/.github"]
license = "MPL v2.0"
readme = "README.md"
repository = "https://github.com/gibbz00/bedy"
version = "0.1.0"

[workspace.dependencies]
# Project
bedy-common = { path = "crates/common" }

# External
derive-getters = "0.5"
futures = { version = "0.3", default-features = false }
uuid = "1"

[workspace.lints.rust]
missing_docs = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
self_named_module_files = "deny"

[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html#avoid-linking-debug-info
debug = 0
strip = "debuginfo"
