[package]
name = "bedy-poc-declarations"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Project
bedy-common.workspace = true

# External
derive-getters.workspace = true
futures.workspace = true

[lints]
workspace = true
